--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,20 @@ bitflags = "2.9.1"
 futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
 rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
 
+[dependencies.smoltcp]
+version = "0.12.0"
+default-features = false
+features = [
+    "alloc",
+    "async",
+    "medium-ethernet",
+    "medium-ip",
+    "proto-ipv4",
+    "proto-ipv6",
+    "socket-tcp",
+    "socket-udp"
+]
+
 [profile.release]
 strip = true
 opt-level = "z"
