--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ bitflags = "2.9.1"
 futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
 rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
 rustc-hash = { version = "2.1", default-features = false }
+smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "medium-ethernet", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
 
 [features]
 default = ["smp"]
